<resources>
    <string name="app_name">Отель \"Крутики\"</string>
    <string name="menu_name">Name</string>
    <string name="print">print</string>
    <string name="_0">0</string>
    <string name="add_to_order">Добавить к заказу</string>
    <string name="delete_from_order">Удалить из заказа</string>
    <string name="price">Price</string>
    <string name="unit">Unit</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="menu">Меню</string>
    <string name="save">Сохранить</string>
    <string name="order">Заказать</string>
    <string name="sum">Sum</string>
    <string name="sum_for_pay">Сумма к оплате:</string>
    <string name="table">table</string>
    <string name="seat">seat</string>
    <string name="order_number">Заказ №</string>
    <string name="number">number</string>
    <string name="refersh">Обновить</string>
    <string name="user_name">barr</string>
    <string name="user_password">HAheR3</string>
</resources>
